<resources>
    <string name="app_name">Le Progeaaaaaiiit</string>

    <string name="label_name">Nom :</string>
    <string name="hint_name">Nom</string>
    <string name="label_surname">Prenom :</string>
    <string name="hint_surname">Prenom</string>
    <string name="label_address">Adresse :</string>
    <string name="hint_address">Adresse</string>
    <string name="label_city">Ville :</string>
    <string name="hint_city">Ville</string>
    <string name="label_postalcode">Code postal :</string>
    <string name="hint_postalcode">Code postal</string>

    <string name="label_environmenttype">Type environnement :</string>
    <string name="hint_environmenttype">Type environnement</string>
    <string name="label_brand">Marque :</string>
    <string name="hint_brand">Marque</string>
    <string name="label_model">Modèle :</string>
    <string name="hint_model">Modèle</string>
    <string name="label_priceperday">Prix par jour :</string>
    <string name="hint_priceperday">Prix par jour</string>
    <string name="label_matricul">Immatriculation :</string>
    <string name="hint_matricul">Immatriculation</string>
    <string name="label_picture">Image :</string>
    <string name="hint_picture">Image</string>

    <string name="label_idConnexion">ID Utilisateur :</string>
    <string name="hint_idConnexion">ID Utilisateur</string>

    <string name="label_mdp">Mot de passe :</string>
    <string name="hint_mdp">Mot de Passe</string>

    <string name="menu_ajouter">Ajouter</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_modifier">Modifier</string>
    <string name="menu_envoyer">Envoyer</string>

    <string name="exception_vehicule_form_get">STFU</string>
    <string name="msg_update_vehicule">Mise à jour du véhicule</string>

    <string name="msg_demande_permission_snackbar">Pour accéder aux contacts, veuillez accepter la permission</string>

    <string name="ok">OUIOUIOUIOUIOUIOUIOUI</string>
    <string name="nok">No U</string>
    <string name="title_alert_quit">Tu dégage ?</string>
    <string name="msg_alert_quit">T\'es sûr que tu veux dégager ?</string>

    <string-array name="type_option">
        <item>Citadine</item>
        <item>Break</item>
        <item>Berline</item>
    </string-array>


</resources>
